--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.3",
     "nodemon": "^2.0.22",
     "npm-watch": "^0.11.0",
