--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,8 +26,9 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-select": "^5.7.0",
+    "react-toastify": "^9.1.3",
     "regedit": "^5.1.2",
-    "sass": "^1.63.4",
+    "sass": "^1.63.5",
     "vue-chartjs": "^5.2.0"
   },
   "devDependencies": {
