--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.1.4",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
