Change work dir in container

--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+      - .:/usr/src
+      - /usr/src/node_modules
     depends_on:
       mysqldb:
         condition: service_healthy
