--- a/Backend/dockerfile
+++ b/Backend/dockerfile
@@ -1,7 +1,7 @@
 FROM node:16
 
 RUN npm install -g sequelize-cli
-COPY package.json .
+COPY package*.json ./
 RUN npm install
 RUN npm rebuild bcrypt --build-from-source
 
